# SICC_proyect

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  execute_migration.py  init_db.py  requirements.txt  respaldo_bitacora.csv  test_conn.py  test_dashboard_crud.py
app/: main.py
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
backend/app/core/: replicated_tables.py  sede_router.py  sql_dialect.py
backend/app/db/: engines.py  mongo.py  session.py
backend/app/repositories/: activo_repo.py  auth_repo.py  base.py  bitacora_repo.py  catalogo_repo.py  incidente_activo_repo.py  incidente_repo.py  mongo_repo.py  reporte_repo.py  sync_repo.py  usuario_repo.py
backend/app/routers/: activos.py  auth.py  bitacora.py  catalogos.py  health.py  incidentes.py  mongo_documentos.py  reportes.py  sync.py  usuarios.py
backend/app/schemas/: activos.py  auth.py  bitacora.py  catalogos.py  common.py  incidente_activos.py  incidentes.py  mongo.py  reportes.py  sync.py  usuarios.py
backend/app/services/: activo_service.py  activo_transfer_service.py  auth_service.py  bitacora_service.py  catalogo_service.py  incidente_activo_service.py  incidente_service.py  mongo_service.py  reporte_service.py  sync_service.py  (+1 more)
backend/tests/: conftest.py  test_health.py  test_incidente_activo_vinculo.py  test_reportes_global.py  test_sede_scope.py  test_sync_lww.py  test_sync_no_incidentes.py  test_tipos_incidente_central.py  test_transactions.py  test_transfer.py
(+209 files in other folders)
