[project]
name = "sicc-backend"
version = "0.1.0"
description = "API REST SICC — incidentes y activos multi-sede"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "pymysql>=1.1.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "pymongo>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requiere PostgreSQL y MySQL en ejecución",
]

[tool.ruff]
line-length = 100
target-version = "py311"
